fixing bug 186088 - Mozilla crashes during installation of XPI Packages [@ nsInstallFile::CreateAllFolders]. r=ccarlen,sr=dveditz